More get post user, search post