@@ -3,6 +3,7 @@ package com.social_luvina.social_dev8.modules.services.impl;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
@@ -15,12 +16,15 @@ import org.springframework.data.domain.Sort;
 
 import com.social_luvina.social_dev8.modules.exception.CustomException;
 import com.social_luvina.social_dev8.modules.models.dto.request.PostRequest;
+import com.social_luvina.social_dev8.modules.models.dto.request.PostSearchRequest;
 import com.social_luvina.social_dev8.modules.models.dto.response.ApiResponse;
 import com.social_luvina.social_dev8.modules.models.dto.response.PostResponse;
 import com.social_luvina.social_dev8.modules.models.entities.Post;
 import com.social_luvina.social_dev8.modules.models.entities.User;
 import com.social_luvina.social_dev8.modules.models.enums.PostStatus;
+import com.social_luvina.social_dev8.modules.repositories.CommentRepository;
 import com.social_luvina.social_dev8.modules.repositories.FriendRepository;
+import com.social_luvina.social_dev8.modules.repositories.LikeRepository;
 import com.social_luvina.social_dev8.modules.repositories.PostRepository;
 import com.social_luvina.social_dev8.modules.repositories.UserRepository;
 import com.social_luvina.social_dev8.modules.services.interfaces.PostServiceInterface;
@@ -34,6 +38,8 @@ public class PostService implements PostServiceInterface {
     
   private final UserRepository userRepository;
   private final PostRepository postRepository;
+  private final LikeRepository likeRepository;
+  private final CommentRepository commentRepository;
   private final ImageService imageService;
   private final FriendRepository friendRepository;
 
@@ -69,15 +75,7 @@ public class PostService implements PostServiceInterface {
 
     postRepository.save(post);
 
-    PostResponse postResponse = new PostResponse(
-        post.getId(),
-        post.getUser().getId(),
-        post.getTitle(),
-        post.getContent(),
-        post.getCreatedAt(),
-        post.getPostStatus(),
-        post.getImages()
-    );
+    PostResponse postResponse = new PostResponse(post);
 
     return ResponseEntity.ok(
         ApiResponse.<PostResponse>builder()
@@ -120,15 +118,7 @@ public class PostService implements PostServiceInterface {
       postRepository.save(post);
     }
 
-    PostResponse postResponse = new PostResponse(
-      post.getId(),
-      post.getUser().getId(),
-      post.getTitle(),
-      post.getContent(),
-      post.getCreatedAt(),
-      post.getPostStatus(),
-      post.getImages()
-    );
+    PostResponse postResponse = new PostResponse(post);
 
     ApiResponse<PostResponse> apiResponse = ApiResponse.<PostResponse>builder()
               .message("Edit post completed")
@@ -162,6 +152,58 @@ public class PostService implements PostServiceInterface {
   }
 
   @Override
+  public ResponseEntity<ApiResponse<List<PostResponse>>> searchPost(Authentication authentication, PostSearchRequest request){
+    User user = getAuthenticatedUser(authentication);
+
+    List<User> friends = friendRepository.findAllFriends(user);
+
+    if (friends.isEmpty()) {
+      friends = new ArrayList<>();
+    }
+    friends.add(user);
+    
+    if (request.getKeyword() == null && request.getKeyword().trim().isEmpty()){
+      throw new CustomException("Vui lòng nhập nội dung muốn tìm kiếm!", HttpStatus.BAD_REQUEST);
+    }
+    
+    Page<Post> posts = postRepository.searchPostsByKeyword(request.getKeyword().toLowerCase().trim(),
+      PostStatus.PUBLIC, PostStatus.FRIENDS_ONLY, friends ,PostStatus.PRIVATE, user,
+      PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt"))
+    );
+
+    if (posts.isEmpty()) {
+      throw new CustomException("Không tìm thấy bài viết nào!", HttpStatus.NOT_FOUND);
+    }
+
+    LocalDateTime startDate = LocalDateTime.of(2025, 1, 1, 0, 0);  
+    LocalDateTime endDate = LocalDateTime.now();
+
+    List<PostResponse> postResponses = posts.getContent().stream().map(post -> {
+      int likeCount = likeRepository.countByPostIdsAndCreatedAtBetween(List.of(post.getId()), startDate, endDate);
+      int commentCount = commentRepository.countByPostIdsAndCreatedAtBetween(List.of(post.getId()), startDate, endDate);
+      return PostResponse.builder()
+            .id(post.getId())
+            .userId(post.getUser().getId())
+            .title(post.getTitle())
+            .content(post.getContent())
+            .createdAt(post.getCreatedAt())
+            .postStatus(post.getPostStatus())
+            .images(post.getImages())
+            .likeCount(likeCount)
+            .commentCount(commentCount)
+            .build();
+    }).collect(Collectors.toList());
+
+    return ResponseEntity.ok(
+        ApiResponse.<List<PostResponse>>builder()
+            .status(HttpStatus.OK.value())
+            .message("Tìm kiếm bài viết thành công!")
+            .data(postResponses)
+            .build()
+    );
+  }
+
+  @Override
   public ResponseEntity<ApiResponse<List<PostResponse>>> getTimeline(Authentication authentication) {
       User user = getAuthenticatedUser(authentication);
 
@@ -174,8 +216,13 @@ public class PostService implements PostServiceInterface {
 
       Page<Post> posts = postRepository.findRecentPostsByUsersAndSelf(friends, user, PostStatus.PRIVATE, PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt")));
 
-      List<PostResponse> postResponses = posts.getContent().stream().map(post -> 
-          PostResponse.builder()
+      LocalDateTime startDate = LocalDateTime.of(2025, 1, 1, 0, 0);  
+      LocalDateTime endDate = LocalDateTime.now();
+
+      List<PostResponse> postResponses = posts.getContent().stream().map(post -> {
+        int likeCount = likeRepository.countByPostIdsAndCreatedAtBetween(List.of(post.getId()), startDate, endDate);
+        int commentCount = commentRepository.countByPostIdsAndCreatedAtBetween(List.of(post.getId()), startDate, endDate);
+        return PostResponse.builder()
               .id(post.getId())
               .userId(post.getUser().getId())
               .title(post.getTitle())
@@ -183,9 +230,10 @@ public class PostService implements PostServiceInterface {
               .createdAt(post.getCreatedAt())
               .postStatus(post.getPostStatus())
               .images(post.getImages())
-              .build()
-      ).toList();
-
+              .likeCount(likeCount)
+              .commentCount(commentCount)
+              .build();
+      }).collect(Collectors.toList());
 
       return ResponseEntity.ok(
             ApiResponse.<List<PostResponse>>builder()
@@ -194,5 +242,42 @@ public class PostService implements PostServiceInterface {
                   .data(postResponses)
                   .build()
       );
+  }
+
+  @Override
+  public ResponseEntity<ApiResponse<List<PostResponse>>> getPostUser(Authentication authentication) {
+    User user = getAuthenticatedUser(authentication);
+    if (user == null) {
+      throw new CustomException("User không tồn tại", HttpStatus.NOT_FOUND);
+    }
+
+    Page<Post> posts = postRepository.findByUserOrderByCreatedAtDesc(user, PageRequest.of(0, 10, Sort.by(Sort.Direction.DESC, "createdAt")));
+
+    LocalDateTime startDate = LocalDateTime.of(2025, 1, 1, 0, 0);  
+    LocalDateTime endDate = LocalDateTime.now();
+
+    List<PostResponse> postResponses = posts.getContent().stream().map(post -> {
+    int likeCount = likeRepository.countByPostIdsAndCreatedAtBetween(List.of(post.getId()), startDate, endDate);
+    int commentCount = commentRepository.countByPostIdsAndCreatedAtBetween(List.of(post.getId()), startDate, endDate);
+    return PostResponse.builder()
+            .id(post.getId())
+            .userId(post.getUser().getId())
+            .title(post.getTitle())
+            .content(post.getContent())
+            .createdAt(post.getCreatedAt())
+            .postStatus(post.getPostStatus())
+            .images(post.getImages())
+            .likeCount(likeCount)
+            .commentCount(commentCount)
+            .build();
+    }).collect(Collectors.toList());
+
+    return ResponseEntity.ok(
+        ApiResponse.<List<PostResponse>>builder()
+            .status(HttpStatus.OK.value())
+            .message("Lấy bài viết của bạn thành công!")
+            .data(postResponses)
+            .build()
+    );
   }
 }
